# mcstatus-checker

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml  rust.yml
src/: main.rs
