[package]
name = "mcstatus-checker"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-minecraft-ping = "0.8.0"
serde = { version = "1", features = ["derive"] }
rocket = { version = "0.5.0-rc.2", features = ["json", "serde_json"] }
thiserror = "*"
serde_with = "*"

[dependencies.tokio]
version = "*"
features = [
    "time",
    "fs",
    "macros",
    "rt-multi-thread",
    "net",
    "io-util"
]

[profile.release]
panic = "abort"
strip = true
opt-level = "z"  # Optimize for size.
lto = true